@@ -1,3 +1,7 @@
+Sun Dec 12 21:31:44 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* cse.c (cse_basic_block): Free qty_table consistently.
+
 1999-12-12  David S. Miller  <davem@redhat.com>
 	    Jakub Jelinek    <jakub@redhat.com>
 
